adding week 6 code
