# controllers/user.js
@@ -1,83 +1,110 @@
 const mongodb = require('../db/connect');
 const ObjectId = require('mongodb').ObjectId;
 
-const getUsers = async (req, res, next) => {
-  const result = await mongodb.getDb().db().collection('user').find();
-  result.toArray().then((lists) => {
-    res.setHeader('Content-Type', 'application/json');
-    res.status(200).json(lists);
-  });
+const getUsers = async (req, res) => {
+  try {
+    const result = await mongodb.getDb().db().collection('user').find();
+    result.toArray().then((lists) => {
+      res.setHeader('Content-Type', 'application/json');
+      res.status(200).json(lists);
+    });
+  } catch (err) {
+    res.status(500).json(err);
+  }
 };
 
 const getSingle = async (req, res) => {
-  const userId = new ObjectId(req.params.id);
-  const result = await mongodb
-    .getDb()
-    .db()
-    .collection('user')
-    .find({ _id: userId });
-  result.toArray().then((lists) => {
-    res.setHeader('Content-Type', 'application/json');
-    res.status(200).json(lists[0]);
-  });
+  try {
+    if (!ObjectId.isValid(req.params.id)) {
+      res.status(400).json('Must use a valid contact id to find a contact.');
+    }
+    const userId = new ObjectId(req.params.id);
+    const result = await mongodb
+      .getDb()
+      .db()
+      .collection('user')
+      .find({ _id: userId });
+    result.toArray().then((lists) => {
+      res.setHeader('Content-Type', 'application/json');
+      res.status(200).json(lists[0]);
+    });
+  } catch (err) {
+    res.status(500).json(err);
+  }
 };
 
 const createUser = async (req, res) => {
-  const user = {
-    name: req.body.name,
-    email: req.body.email,
-    password: req.body.password,
-  };
-  const response = await mongodb
-    .getDb()
-    .db()
-    .collection('user')
-    .insertOne(user);
-  if (response.acknowledged) {
-    res.status(201).json(response);
-  } else {
-    res
-      .status(500)
-      .json(response.error || 'An error occurred when creating the user.');
+  try {
+    const user = {
+      name: req.body.name,
+      email: req.body.email,
+      password: req.body.password,
+    };
+    const response = await mongodb
+      .getDb()
+      .db()
+      .collection('user')
+      .insertOne(user);
+    if (response.acknowledged) {
+      res.status(201).json(response);
+    } else {
+      res
+        .status(500)
+        .json(response.error || 'An error occurred when creating the user.');
+    }
+  } catch (err) {
+    res.status(500).json(err);
   }
 };
 
 const updateUser = async (req, res) => {
-  const userId = new ObjectId(req.params.id);
-  const user = {
-    name: req.body.name,
-    email: req.body.email,
-    password: req.body.password,
-  };
-  const response = await mongodb
-    .getDb()
-    .db()
-    .collection('user')
-    .replaceOne({ _id: userId }, user);
-  console.log(response);
-  if (response.modifiedCount > 0) {
-    res.status(204).send();
-  } else {
-    res
-      .status(500)
-      .json(response.error || 'An error occurred when updating the user.');
+  try {
+    const userId = new ObjectId(req.params.id);
+    const user = {
+      name: req.body.name,
+      email: req.body.email,
+      password: req.body.password,
+    };
+    const response = await mongodb
+      .getDb()
+      .db()
+      .collection('user')
+      .replaceOne({ _id: userId }, user);
+    console.log(response);
+    if (response.modifiedCount > 0) {
+      res.status(204).send();
+      console.log('user was successfully updated.');
+    } else {
+      res
+        .status(500)
+        .json(response.error || 'Some error occurred while updating the user.');
+    }
+  } catch (err) {
+    res.status(500).json(err);
   }
 };
 
 const deleteUser = async (req, res) => {
-  const userId = new ObjectId(req.params.id);
-  const response = await mongodb
-    .getDb()
-    .db()
-    .collection('user')
-    .deleteOne({ _id: userId }, true);
-  console.log(response);
-  if (response.deletedCount > 0) {
-    res.status(204).send();
-  } else {
-    res
-      .status(500)
-      .json(response.error || 'An error occurred when deleting the user.');
+  try {
+    if (!ObjectId.isValid(req.params.id)) {
+      res.status(400).json('Must use a valid user id to delete a user.');
+    }
+    const userId = new ObjectId(req.params.id);
+    const response = await mongodb
+      .getDb()
+      .db()
+      .collection('user')
+      .deleteOne({ _id: userId }, true);
+    console.log(response);
+    if (response.deletedCount > 0) {
+      res.status(204).send();
+    } else {
+      res
+        .status(500)
+        .json(response.error || 'An error occurred when deleting the user.');
+    }
+  } catch (err) {
+    res.status(500).json(err);
   }
 };
 
