# routes/sites.js
@@ -1,11 +1,12 @@
 const routes = require('express').Router();
 
 const siteController = require('../controllers/site');
+const validation = require('../middleware/validate');
 
 routes.get('/', siteController.getSites);
 routes.get('/:id', siteController.getSingle);
-routes.post('/new', siteController.createSite);
-routes.put('/update', siteController.updateSite);
-routes.delete('/delete', siteController.deleteSite);
+routes.post('/new', validation.saveSite, siteController.createSite);
+routes.put('/:id', validation.saveSite, siteController.updateSite);
+routes.delete('/:id', siteController.deleteSite);
 
 module.exports = routes;
